feat: add prime vue aura preset

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "nuxt": "^3.12.4",
+    "primeicons": "^7.0.0",
     "primevue": "^4.0.4",
+    "tailwindcss-primeui": "^0.3.4",
     "vue": "latest"
   },
   "devDependencies": {
