--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/supabase": "^1.3.5",
     "@pinia/nuxt": "^0.5.3",
     "@primevue/themes": "^4.0.5",
+    "googleapis": "^144.0.0",
     "nuxt": "^3.12.4",
     "pinia": "^2.2.1",
     "primeicons": "^7.0.0",
@@ -22,6 +23,8 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
-    "@primevue/nuxt-module": "^4.0.4"
+    "@primevue/nuxt-module": "^4.0.4",
+    "@vueuse/core": "^11.1.0",
+    "@vueuse/nuxt": "^11.1.0"
   }
 }
