--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@vueuse/core": "^11.1.0",
-    "@vueuse/nuxt": "^11.1.0"
+    "@vueuse/nuxt": "^11.1.0",
+    "daisyui": "^4.12.10"
   }
 }
