--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@nuxtjs/supabase": "^1.3.5",
     "@pinia/nuxt": "^0.5.3",
+    "@primevue/themes": "^4.1.0",
     "googleapis": "^144.0.0",
     "nuxt": "^3.12.4",
     "pinia": "^2.2.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.1.0",
     "vue": "latest"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@primevue/nuxt-module": "^4.1.0",
     "@vueuse/core": "^11.1.0",
-    "@vueuse/nuxt": "^11.1.0",
-    "daisyui": "^4.12.10"
+    "@vueuse/nuxt": "^11.1.0"
   }
 }
