--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@nuxtjs/supabase": "^1.3.5",
     "@pinia/nuxt": "^0.5.3",
+    "@primevue/forms": "^4.2.2",
     "@primevue/themes": "^4.1.0",
     "googleapis": "^144.0.0",
     "nuxt": "^3.12.4",
     "pinia": "^2.2.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
-    "vue": "latest"
+    "vue": "latest",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
