--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/image": "1.10.0",
+    "@nuxtjs/google-fonts": "3.2.0",
     "@nuxtjs/supabase": "^1.5.0",
     "@pinia/nuxt": "^0.10.1",
     "@primevue/forms": "^4.3.3",
