--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@pinia/nuxt": "^0.10.1",
     "@primevue/forms": "^4.3.3",
     "@primevue/themes": "^4.3.3",
+    "@tailwindcss/vite": "^4.1.2",
     "googleapis": "^146.0.0",
     "motion-v": "^0.13.1",
     "nuxt": "^3.16.1",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.3",
+    "tailwindcss": "^4.1.2",
     "vue": "^3.5.13",
     "zod": "^3.24.2"
   },
